# azure_automation_framework

./: README.md
prp_automation_framework/: .gitignore  MANIFEST.in  README.md  data_generator.py  pdp_framework.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  transformations.py  trigger_adf_pipeline.py  upload_to_azure.py  validations.py
prp_automation_framework/config/: PRP_ExtraHoursAPI_ExtraHours_config.json  extrahours_serve_data_config.json
prp_automation_framework/sample_data/: colleague.csv  extrahours.csv  location.csv  skills.csv  status.csv
prp_automation_framework/tests/: conftest.py  sample_dq_checks.py  test_pdp_automation_dq_checks.py  test_pdp_automation_flow2.py  test_pdp_automation_flow3.py  test_pdp_extrahours.py  test_pdp_extrahours_oneattime.py  test_pdp_extrahours_with_run_id.py  test_pdp_flow_extrahours.py
prp_automation_framework/tests/test_report/: pdp_test_report_extrahours_dqcheck_12-09-2023T11-30-55.html  pdp_test_report_extrahours_endtoend_11-09-2023T19-24-12.html  pdp_test_report_extrahours_endtoend_11-09-2023T19-28-26.html  pdp_test_report_extrahours_endtoend_endtoend_07-09-2023T13-28-37.html
prp_automation_framework/utils/: utils.py
