[metadata]
name = pdpautomationframework
version = 1.0
author= Shanwaz Hussain
author_email= shanwaz.hussain@tesco.com
license='TESCO'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.dev.global.tesco.org/INE12405137/pdp_automation_framework
classifiers =
    Programming Language :: Python :: 3
    License :: Tesco Ltd
    Operating System :: OS Independent

[options]
packages =  find:
python_required = >=3.7
include_package_data = True
py_modules = ["pdp_framework","data_generator","upload_to_azure","trigger_adf_pipeline","validations","transformations"]

[options.entry_points]
console_scripts =
    pdpautomationframework = pdp_framework:PdpAutomation

